Some more CSS fixes for contrast

--- a/application/views/themes/default/css/default/sass/config.sass
+++ b/application/views/themes/default/css/default/sass/config.sass
@@ -12,7 +12,7 @@ $link_color_hover: #555							// General link hover color, may be overridden in 
 $general_background_color: #f9f9f9	// The background color shown under content
 $general_min_width: 620px 					// Should be kept somewhere between 600 - 768
 
-$border-color-dark: #999
+$border-color-dark: #aaa
 $border-color-light: #ccc
 
 $table-odd-color: #eee
@@ -22,7 +22,7 @@ $weak-shadow-color: #bbb
 $hard-shadow-color: #888
 
 $gradient-dark-hi: #f9faf8
-$gradient-dark-lo: #e8e9e7
+$gradient-dark-lo: #e5e6e4
 
 $gradient-medium-hi: #fff
 $gradient-medium-hi: #fff
