--- a/application/views/themes/default/css/default/sass/header.sass
+++ b/application/views/themes/default/css/default/sass/header.sass
@@ -5,7 +5,7 @@
 	@include background(linear-gradient(top, $gradient-dark-hi, $gradient-dark-lo))
 	@include filter-gradient($gradient-dark-hi, $gradient-dark-lo, vertical)
 	box-shadow: 0 0 6px rgba(0,0,0,0.3)
-	border-bottom: 1px solid #c6c8c4
+	border-bottom: 1px solid $border-color-dark
 	height: $header_height
 	min-width: 768px
 	position: fixed
