--- a/application/views/themes/default/css/default/sass/widget.sass
+++ b/application/views/themes/default/css/default/sass/widget.sass
@@ -33,6 +33,7 @@
 	padding: 6px 0 2px 6px
 	overflow: auto
 	position: relative
+	font-weight: bold
 
 	span
 		@include force-wrap
